# nosql-mcp-server

./: README.md
.kiro/settings/: mcp.json
.kiro/specs/custom-mcp-server/: design.md  requirements.md  tasks.md
custom-mcp-server/: .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  DEMO_CLIENT_README.md  DEPLOYMENT_GUIDE.md  KIRO_INTEGRATION_GUIDE.md  LICENSE  README.md  config.json  demo_client.py  final_validation_report.md  git_setup.bat  git_setup.sh  mcp-config-example.json  package.py  pyproject.toml  pytest.ini  quick_functional_test.py  requirements.txt  run_server.py  setup.py  start_client.bat  start_client.sh  start_server.bat  start_server.sh  test_simple.py  validate_requirements.py
custom-mcp-server/.github/workflows/: test.yml
custom-mcp-server/src/: __init__.py  mcp_client.py  mcp_server.py  response_formatter.py
custom-mcp-server/src/client/: __init__.py  demo_client.py  main.py
custom-mcp-server/src/database/: __init__.py  init_db.py  manager.py  query_parser.py
custom-mcp-server/src/server/: main.py
custom-mcp-server/tests/: test_automation.py  test_database_init.py  test_database_manager.py  test_demo_client.py  test_error_handling.py  test_factories.py  test_integration.py  test_mcp_client.py  test_mcp_server.py  test_mcp_tools.py  test_performance.py  test_query_parser.py  test_response_formatter.py  test_runner.py  test_user_task_filtering.py
data/: mcp_server.json
